# kanban_metrics

./: .gitignore  ISSUES.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: iterative_metrics.py
src/iterative_metrics/: cfd.py  count_cards_in_image.py  count_work_items_in_image.py  cumulative_flow_diagram.py  debug_image.py  find_bounding_rectangles_of_largest_closed_shapes.py  find_work_items_by_workflow_steps.py  find_work_items_in.py  find_work_items_in_image.py  find_workflow_steps_in_image.py  main.py  rectangle.py  work_item.py  workflow_step.py
src/iterative_metrics/domain/: rectangle.py  work_item.py  work_items.py  workflow_step.py  workflow_steps.py
src/iterative_metrics/eventing/: consumer.py  event_aggregator.py  event_collection.py  wait_for_multiple_events.py
tests/: test_cfd.py  test_count_cards_in_image.py  test_count_work_items_in_image.py  test_cumulative_flow_diagram.py  test_find_work_items_by_workflow_steps.py  test_find_work_items_in_image.py  test_find_workflow_steps_in_image.py  test_hemingway_bridge.py  test_rectangle.py  test_rectangle_area.py  test_rectangle_contains.py  test_rectangle_intersects.py
tests/domain/: test_rectangle_area.py  test_rectangle_contains.py  test_rectangle_intersects.py  test_work_items.py  test_workflow_step.py  test_workflow_steps.py
tests/eventing/: test_consume.py  test_event_collection.py  test_wait_for_multiple_events.py  test_wait_for_multiple_events_consume.py  test_wait_for_multiple_events_integration.py
tests/integration/: test_main.py
(+37 files in other folders)
