[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iterative_metrics"
version = "0.0.1"
authors = [
  { name="Stefan Boos", email="kontakt@boos.systems" },
]
description = "Provides a cumulative flow diagram for our excel metrics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wonderbird/iterative_metrics"
"Bug Tracker" = "https://github.com/wonderbird/iterative_metrics/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
